# bibracte-portfolio

./: .gitignore  logging_config.yaml  pyproject.toml  pytest.ini  ruff.toml
bet_edge/: logging_setup.py  setup_logging.py
bet_edge/backtesting/: data_handler.py  execution_handler.py  portfolio.py  run_backtest.py  strategy.py
bet_edge/data_io/: databento.py  env_cred_provider.py  env_credential_provider.py  interfaces.py  local_file_handler.py  polars_loader.py  s3_file_handler.py  transfer_functions.py  utils.py
bet_edge/dataclasses/: dataclass_from_dict.py  dataclass_to_df.py
bet_edge/dataframes/: column_helpers.py  dataframe_manager.py  game_stats.py  managers.py  ohlcv_time_series.py  pipeline.py  time_series.py
bet_edge/nfl/: backtest.py  injury.py  nfl_data.py  nfl_data_manager.py  weekly.py
bet_edge/odds_api/: api_client.py  odds_processing.py
bet_edge/options_pipeline/: data_lake.py  options_processing.py
bet_edge/probabilistic_models/: dpm.py  kfold_dpm.py  model_io.py
notebooks/: databento_nb.ipynb  polygon_nb.ipynb  portolio_opt_nb.ipynb  testing_backtest.ipynb  testing_strategy.ipynb
scripts/: test_logging.py  test_prediction.py  train_save_prob_models.py
tests/: conftest.py
tests/data_io/: test_databento.py  test_env_credential_manager.py  test_execute_sql.py  test_local_file_manager.py  test_polars_loader.py  test_s3_file_handler.py  test_storage.py
tests/dataclasses/: test_dataclass_from_dict.py  test_dataclass_to_df.py
tests/dataframes/: test_column_helpers.py  test_dataframe_manager.py  test_game_stats.py  test_time_series.py  (+1 more)
(+16 files in other folders)
