[project]
name = "bet-edge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.76",
    "polars>=1.15.0",
    "pytest-benchmark>=5.1.0",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "ruff>=0.8.0",
    "scikit-learn>=1.5.2",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "pyyaml>=6.0.2",
    "nfl-data-py>=0.3.3",
    "psycopg2-binary>=2.9.10",
    "databento>=0.47.0",
    "s3fs>=2024.12.0",
    "seaborn>=0.13.2",
    "pywavelets>=1.8.0",
    "numba>=0.61.0",
    "py-vollib>=1.0.1",
    "yfinance>=0.2.54",
    "py-vollib-vectorized>=0.1.1",
    "memory-profiler>=0.61.0",
    "beautifulsoup4>=4.13.3",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "platform_system != 'Darwin'"},
]
torchvision = [
  { index = "pytorch-cu121", marker = "platform_system != 'Darwin'"},
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[project.scripts]
bet-edge = "bet_edge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
